--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                     <div class="pricing-card h-100">
                         <h4 class="pricing-card-title">Dashboard E-commerce</h4>
                         <div class="pricing-card-header">
-                            <img class="pricing-card-icon img-fluid" src="C:\Users\wafiu\OneDrive\Desktop\Semester 5\MATA KULIAH\PEMROGRAMAN WEB I - SELASA\project lab\portofolio\img project\Cuplikan layar 2024-10-23 050041.png" alt="Dashboard E-commerce">
+                            <img class="pricing-card-icon img-fluid" src="img project/Cuplikan layar 2024-10-23 043153.png" alt="Dashboard E-commerce">
                         </div>
 
                         <a href="project saya/dasboard penjualan e commmerce/index.html" class="btn btn-primary mt-3 pricing-card-btn">Lihat Project</a>
