--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                     <div class="pricing-card h-100">
                         <h4 class="pricing-card-title">Form Login</h4>
                         <div class="pricing-card-header"><br>
-                            <img class="pricing-card-icon img-fluid" src="C:\Users\wafiu\OneDrive\Desktop\Semester 5\MATA KULIAH\PEMROGRAMAN WEB I - SELASA\project lab\portofolio\img project\Cuplikan layar 2024-10-23 052517.png" alt="Form Login">
+                            <img class="pricing-card-icon img-fluid" src="img project/Cuplikan layar 2024-10-23 052517.png" alt="Form Login">
                         </div>
                         <a href="project saya/form login/login.html" class="btn btn-primary mt-4 pricing-card-btn">Lihat Project</a>
                     </div>
@@ -355,7 +355,7 @@
                     <div class="pricing-card h-100">
                         <h4 class="pricing-card-title">Kalkulator Scientist</h4>
                         <div class="pricing-card-header">
-                            <img class="pricing-card-icon img-fluid" src="C:\Users\wafiu\OneDrive\Desktop\Semester 5\MATA KULIAH\PEMROGRAMAN WEB I - SELASA\project lab\portofolio\img project\Cuplikan layar 2024-10-23 052248.png" alt="KALKULATOR">
+                            <img class="pricing-card-icon img-fluid" src="img project/Cuplikan layar 2024-10-23 052248.png" alt="KALKULATOR">
                         </div><br>
                         <a href="project saya/Kalkulator/index.html" class="btn btn-primary mt-3 pricing-card-btn">Lihat Project</a>
                     </div>
