--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="service-card">
                         <div class="body">
-                            <img src="C:\Users\wafiu\OneDrive\Desktop\Semester 5\MATA KULIAH\PEMROGRAMAN WEB I - SELASA\project lab\portofolio\assets\gambar\WhatsApp Image 2024-10-05 at 23.43.23.jpeg" alt="smk" class="icon">
+                            <img src="assets/gambar/smk.jpeg" alt="smk" class="icon">
                             <h6 class="title">SMK Al-Hikmah Curug</h6>
                             <p class="subtitle">Jurusan: Teknik Komputer dan Jaringan <br>
                                 Tahun : 2019 - 2022</p>
@@ -327,7 +327,7 @@
                     <div class="pricing-card h-100">
                         <h4 class="pricing-card-title">Dashboard E-commerce</h4>
                         <div class="pricing-card-header">
-                            <img class="pricing-card-icon img-fluid" src="img project/Cuplikan layar 2024-10-23 043153.png" alt="Dashboard E-commerce">
+                            <img class="pricing-card-icon img-fluid" src="img project/Cuplikan layar 2024-10-23 050041.png" alt="Dashboard E-commerce">
                         </div>
 
                         <a href="project saya/dasboard penjualan e commmerce/index.html" class="btn btn-primary mt-3 pricing-card-btn">Lihat Project</a>
