--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="service-card">
                         <div class="body">
-                            <img src="assets/gambar/smk.png" alt="smk" class="icon">
+                            <img src="assets/gambar/smk.jpeg" alt="smk" class="icon">
                             <h6 class="title">SMK Al-Hikmah Curug</h6>
                             <p class="subtitle">Jurusan: Teknik Komputer dan Jaringan <br>
                                 Tahun : 2019 - 2022</p>
@@ -205,7 +205,7 @@
                     <br>
                     <a class="portfolio-card">
                         <b>Belajar Dasar Structured Query Language (SQL)</b>
-                        <img class="portfolio-card-img" src="C:\Users\wafiu\OneDrive\Desktop\Semester 5\MATA KULIAH\PEMROGRAMAN WEB I - SELASA\project lab\portofolio\assets\sertifikat\SERTIFIKAT-SQL\SERTIFIKAT SQL_page-0001.jpg" class="img-responsive rounded">    
+                        <img class="portfolio-card-img" src="assets/sertifikat/SERTIFIKAT-SQL/SERTIFIKAT SQL_page-0001.jpg" class="img-responsive rounded">    
                     </a>
                 </div>
 
