--- a/index.html
+++ b/index.html
@@ -423,8 +423,10 @@
 <footer class="footer" style=" color: white;"> 
     <div class="container">
         <section id="contact" class="text-center">
-            <h2 class="section-title mb-2">Connect with Me</h2>
-            <div class="social-links"> <br>
+            <div class="social-links"> 
+            <h2 class="section-title mb-1">Connect with Me</h2>
+            <br><br><br>
+           
                 
                 <a href="https://www.facebook.com/wafi ulhak" class="btn btn-outline-dark btn-social mx-1">
                     <i class="fab fa-facebook-f pl-3"></i> Facebook
@@ -453,6 +455,7 @@
         </section>
     </div>
 </footer>
+
 
 
 
