--- a/index.html
+++ b/index.html
@@ -429,7 +429,16 @@
             <div class="social-links"> 
             <h2 class="section-title mb-1">Connect with Me</h2>
             <br><br><br>
-           
+           <iframe 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d273.6601361865046!2d106.56717194461456!3d-6.229007700674732!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69fde81d75643b%3A0x5db375ba5c7cbb0b!2sSUPLAI%20DAPURMU!5e0!3m2!1sid!2sid!4v1736173779474!5m2!1sid!2sid" ;
+                    width="70%" 
+                    height="350" 
+                    style="border: 0; border-radius: 8px; margin-bottom: 20px;" 
+                    allowfullscreen="" 
+                    loading="lazy" 
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe><br><br>    
+
                 
                 <a href="https://www.facebook.com/wafi ulhak" class="btn btn-outline-dark btn-social mx-1">
                     <i class="fab fa-facebook-f pl-3"></i> Facebook
