--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                             </tr>
                             <tr>
                               <th>Alamat</th>
-                              <td> : Serua Indah, Tangerang, Banten</td>
+                              <td> : Jl. Komp. Tataka Puri J5, No.5</td>
                             </tr>
                           </table>
                         </p>
